# Pigeon-Messenger

./: README.md  demo.md  libs.md  refs.md  requirements.txt
macaron/: pigeon.html  pigeon.json
model/adrs/: adr-1.md  adr-2.md  adr-3.md
model/c4diagrams/: cloudprovider.drawio  pigeonserver.drawio  structurizr
pigeon-client/: Dockerfile  pyproject.toml  run.sh
pigeon-client/client/: commands.py  integration-tests.py  main.py  unit-tests.py
pigeon-client/client/encryption/: pigeonhammer.py
pigeon-client/client/models/: __init__.py  keypair.py  mesages.py  pending.py  users.py
pigeon-client/client/networking/: server_messages.py
pigeon-client/tests/: client-functionality-test.py
pigeon-server/: Dockerfile  Dockerfile.dev  autoscaling.tf  db.tf  docker-compose.yml  ecs.tf  image.tf  lb.tf  load.js  main.tf  pyproject.toml
pigeon-server/server/: __init__.py
pigeon-server/server/models/: server.py
pigeon-server/server/views/: routes.py
