[tool.poetry]
name = "pigeon-client"
version = "0.1.0"
description = ""
authors = ["kat <kaitklake@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
sqlalchemy = "^2.0.30"
cryptography = "^42.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
